# HereCRM

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  HereCRM-PWA.code-workspace  README.md  alembic.ini  chat_states_visualization.md  check_exports.py  check_exports_raw.py  crm.db  current_prompt.md  debug_422.py  debug_endpoint_speed.py  debug_gpt4_stale.txt  debug_output_gpt4.txt  debug_output_raw.txt  debug_stale_log.txt  diagnose_db.py  diagnose_users_expenses.py  docker-compose.e2e.yml  docker-compose.yml  final_final_test_results.txt  final_test_results.txt  herecrm-pwa-openapi.json  herecrm-pwa-openapi.yaml  init_db_sync.py  inspect_routes.py  list_routes.py  llm_context_variables.md  main.py  manual_testing.md  pyproject.toml  pyrefly.toml  railway_status.json  regression_results.txt  repro_customer_500.py  (+20 more)
.agent/rules/: searching-for-specification.md
.agent/workflows/: commit-split.md  spec-kitty.plan.md
.claude/commands/: spec-kitty.review.md
.gemini/commands/: spec-kitty.accept.toml  spec-kitty.analyze.toml  spec-kitty.checklist.toml  spec-kitty.clarify.toml  spec-kitty.constitution.toml  spec-kitty.dashboard.toml  spec-kitty.implement.toml  spec-kitty.merge.toml  spec-kitty.plan.toml  spec-kitty.review.toml  spec-kitty.specify.toml  spec-kitty.tasks.toml
.jules/: bolt.md
.kittify/: metadata.yaml
alembic/: env.py
docs/: financial_manual.md  whatsapp_app_review.md
exports/: export_1_1768654122.csv  export_1_1768654135.csv
herecrm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
pwa/: Dockerfile  __init__.py  chat_ui.py  docker-compose.yml  manager.py  nginx.conf
pwa/assets/: sw.js  (+1 more)
scripts/: benchmark_job_indexing.py  benchmark_jobs.py  benchmark_quote_indexing.py  benchmark_quote_job_index.py  chat_simulator.py  chat_ui.py  check_yaml.py  debug_invoice.py  dev_kitty.py  diag_llm.py  discover_whatsapp.py  fix_tests.py  generate_schema.py  migrate_004.py  security_audit.py  seed_db.py  seed_templates.py  seed_test_user.py  start.sh  test_SMS_send.py  test_fix.py  test_generic_webhook.py  test_geocoding.py  test_integration_address.py  test_lead_flow.py  test_llm.py  test_llm_auth.py  test_openai_direct.py  test_parse.py  test_parser.py  test_sms.py  test_whatsapp_send.py  trigger_migration.js  validate_schemas.py  verify_007_manual.py  verify_llm_tracing.py  verify_messages.py  verify_persistence.py  verify_prompts.py  verify_routing_api.py  (+3 more)
src/: config.py  credentials_models.py  database.py  events.py  llm_client.py  logging_config.py  main.py  models.py  repositories.py  security_utils.py  tool_executor.py  uimodels.py
tests/: conftest.py  reproduce_geocoding_issue.py  reproduce_issue.py  reproduce_spatial_filtering_behavior.py  test_assignment_logic.py  test_auto_confirm.py  test_automation_flows.py  test_autoroute_availability.py  test_autoroute_execution.py  test_autoroute_tool.py  test_availability.py  test_billing_conversation.py  test_billing_fixes.py  test_billing_service.py  test_business_defaults.py  test_calendar_reassignment_bug.py  test_chat_utils.py  test_check_eta_performance.py  test_clerk_webhooks.py  test_config_loading.py  test_confirmation_messages.py  test_crm_pipeline_logic.py  test_crm_search_pipeline.py  test_customer_duplicate.py  test_customer_pov.py  test_customer_spatial_optimization.py  test_dashboard_unscheduled.py  test_data_export.py  test_data_import.py  test_data_management.py  test_db_backup.py  test_debug_db.py  test_default_location.py  test_edit_customer_geocode.py  test_error_handling.py  test_event_bus.py  test_event_emission.py  test_event_infrastructure.py  test_excel_multi_sheet.py  test_export_issue.py  (+77 more)
(+658 files in other folders)
