[project]
name = "herecrm"
requires-python = ">=3.12"
version = "0.1.0"
description = "A CRM right in Whatsapp!"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "requests",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy",
    "aiosqlite",
    "openai",
    "pytest",
    "pytest-asyncio",
    "PyYAML",
    "streamlit>=1.53.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "alembic>=1.13.0",
    "python-multipart",
    "boto3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests", "src/tests"]
norecursedirs = ["scripts"]
addopts = "--ignore=tests/reproduce_spatial_filtering_behavior.py --ignore=tests/reproduce_issue.py"
