[project]
name = "herecrm"
requires-python = ">=3.12"
version = "0.1.0"
description = "A CRM right in Whatsapp!"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "requests",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy",
    "aiosqlite",
    "openai",
    "pytest",
    "pytest-asyncio",
    "PyYAML",
    "streamlit>=1.53.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "alembic>=1.18.1",
    "python-multipart",
    "boto3",
    "twilio>=9.9.1",
    "weasyprint",
    "jinja2",
    "spec-kitty-cli>=0.11.1",
    "stripe>=14.2.0",
    "python-quickbooks>=0.9.1",
    "apscheduler",
    "smsutil",
    "sqlcipher3>=0.6.2",
    "google-api-python-client>=2.188.0",
    "google-auth-oauthlib>=1.2.4",
    "google-auth>=2.47.0",
    "clerk-backend-api>=4.2.0",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.7",
    "svix>=1.63.0",
    "posthog>=7.6.0",
    "schemathesis>=4.9.4",
]

# Optional dependencies for QuickBooks integration:
# pysqlcipher3: Requires system sqlcipher library
# Ubuntu/Debian: sudo apt-get install sqlcipher
# Then: pip install pysqlcipher3

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-m 'not llm_validation'"
markers = [
    "llm_validation: expensive tests that run against the real LLM (nightly)"
]

[tool.pyrefly]
import-roots = ["."]
search-paths = ["."]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
